@@ -98,6 +98,13 @@ tx_solr_CommandResolver::registerPluginCommand(
 );
 
 tx_solr_CommandResolver::registerPluginCommand(
+	'results',
+	'resultsPerPageSwitch',
+	'tx_solr_pi_results_ResultsPerPageSwitchCommand',
+tx_solr_PluginCommand::REQUIREMENT_NONE
+);
+
+tx_solr_CommandResolver::registerPluginCommand(
 	'search, results',
 	'errors',
 	'tx_solr_pi_results_ErrorsCommand',
