@@ -43,6 +43,7 @@
 	* Added a TypoScript option to set a fixed direction for sorting options
 	* Added marker ###FACETING.active### to detect if any facet option has been selected
 	* Added support for plugin commands returning array and objects for rendering in their template subparts
+	* Changed the results per page switch to be a command on its own
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
